--- a/package.json
+++ b/package.json
@@ -2,53 +2,56 @@
   "name": "expo-todo-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "packageManager": "yarn@4.5.0",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "upgrade:tamagui": "yarn up '*tamagui*'@latest '@tamagui/*'@latest",
+    "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary",
+    "check:tamagui": "tamagui check",
+    "start": "expo start -c",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "test": "jest --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.17",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.15",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.5",
-    "expo-web-browser": "~14.0.1",
+    "@react-navigation/native": "^6.1.17",
+    "@tamagui/config": "^1.120.0",
+    "@tamagui/lucide-icons": "^1.120.0",
+    "@tamagui/toast": "^1.120.0",
+    "babel-preset-expo": "^11.0.6",
+    "burnt": "^0.12.2",
+    "expo": "~51.0.32",
+    "expo-build-properties": "~0.12.5",
+    "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "^1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native": "0.75.2",
+    "react-native-reanimated": "~3.15.1",
+    "react-native-safe-area-context": "4.10.9",
+    "react-native-screens": "~3.34.0",
+    "react-native-svg": "15.6.0",
+    "react-native-web": "^0.19.12",
+    "tamagui": "^1.120.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
-  },
-  "private": true
+    "@babel/core": "^7.24.6",
+    "@expo/metro-config": "~0.18.4",
+    "@expo/metro-runtime": "~3.2.1",
+    "@tamagui/babel-plugin": "^1.120.0",
+    "@tamagui/cli": "^1.120.0",
+    "@tamagui/metro-plugin": "^1.120.0",
+    "@types/react": "~18.2.79",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.5.2"
+  }
 }
